--- a/app/views/campaign_mailer/success_open.html.erb
+++ b/app/views/campaign_mailer/success_open.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= @user.first_name %>,</p>
 
-<p>Votre participation à la campagne pour <%= @campaign.product.title %> a contribué à faire découvrir quel prix adopter pour faire de ses opérations de promo un succès. Pour vous en remercier, vous profitez de <%= @campaign.product.title %> pour seulement <%= sprintf('%.2f', @campaign.price_1) %> €.</p>
+<p>Votre participation à la campagne pour <%= @campaign.product.title %> a contribué à faire découvrir quel prix adopter pour faire de ses opérations de promo un succès. Pour vous en remercier, vous profitez de <%= @campaign.product.title %> pour seulement <%= sprintf('%.2f', @campaign.price_1.truncate(2)) %> €.</p>
 
 <p>Voir le détail de votre commande</p>
 
