--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -81,7 +81,7 @@
             </div>
           <% else %>
             <% if @campaign.finalized == true %>
-              <div class="info-detail">Vous avez validé pour <%= sprintf('%.2f', @campaign.price_1) %> € les commandes des testeurs ayant proposé un prix supérieur ou égal à ce celui-ci. Retrouvez ci-dessous l'intégralité des propositions d'achat qui avaient été émises par les testeurs.</div>
+              <div class="info-detail">Vous avez validé pour <%= sprintf('%.2f', @campaign.price_1.truncate(2)) %> € les commandes des testeurs ayant proposé un prix supérieur ou égal à ce celui-ci. Retrouvez ci-dessous l'intégralité des propositions d'achat qui avaient été émises par les testeurs.</div>
             <% else %>
               <div class="info-detail">Veuillez choisir le prix que vous allez accorder aux testeurs en fonction du CA, volume, marges... que vous souhaitez réaliser. Vous pouvez télécharger l'intégralité des données de la campagne afin de pouvoir imputer vos coûts en fonction des volumes réalisés par ligne de chiffre d'affaires, et donc calculer les marges qui en découlent.</div>
             <% end %>
