--- a/app/views/campaigns/_finalize-campaign-modal.html.erb
+++ b/app/views/campaigns/_finalize-campaign-modal.html.erb
@@ -10,7 +10,7 @@
           <h4 class="modal-title">Finaliser la campagne</h4>
         </div>
         <div class="modal-body">
-          Vous vous apprêtez à valider les commandes des testeurs pour <%= sprintf('%.2f', pick.price) %> €. Ceux qui ont choisi un prix supérieur à <%= sprintf('%.2f', pick.price) %> € passent la commande pour <%= sprintf('%.2f', pick.price) %> €, ceux qui avaient choisi un prix inférieur à <%= sprintf('%.2f', pick.price) %> € ne sont pas débités mais ne peuvent pas profiter de la remise à <%= sprintf('%.2f', pick.price) %> € que vous accordez aux autres.
+          Vous vous apprêtez à valider les commandes des testeurs pour <%= sprintf('%.2f', pick.price.truncate(2)) %> €. Ceux qui ont choisi un prix supérieur à <%= sprintf('%.2f', pick.price.truncate(2)) %> € passent la commande pour <%= sprintf('%.2f', pick.price.truncate(2)) %> €, ceux qui avaient choisi un prix inférieur à <%= sprintf('%.2f', pick.price.truncate(2)) %> € ne sont pas débités mais ne peuvent pas profiter de la remise à <%= sprintf('%.2f', pick.price.truncate(2)) %> € que vous accordez aux autres.
           <div class="recap-line"></div>
         </div>
         <div class="modal-footer">
