--- a/app/views/reservations/_recap.html.erb
+++ b/app/views/reservations/_recap.html.erb
@@ -5,23 +5,23 @@
       <div>
       <h4><%= product.title.capitalize %></h4>
       </div>
-      Prix original: <%= sprintf('%.2f', product.price) %> €
+      Prix original: <%= sprintf('%.2f', product.price.truncate(2)) %> €
     </div>
   </div>
   <% if product.expedition_costs.present? %>
     <div class="how-much">
       <div class="text">Coût livraison:</div>
-      <p class="price"><%= sprintf('%.2f', product.expedition_costs) %> €</p>
+      <p class="price"><%= sprintf('%.2f', product.expedition_costs.truncate(2)) %> €</p>
     </div>
   <% end %>
   <div class="how-much">
     <div class="text">Prix max:</div>
-    <p class="price"><span class="max-symbol">⩽</span><%= sprintf('%.2f', @pick.price) %> €</p>
+    <p class="price"><span class="max-symbol">⩽</span><%= sprintf('%.2f', @pick.price.truncate(2)) %> €</p>
   </div>
   <% if  product.expedition_costs.present? %>
     <div class="how-much last">
       <div class="text"><b>Coût total max:</b></div>
-      <p class="price"><span class="max-symbol">⩽</span><%= sprintf('%.2f', product.expedition_costs + @pick.price) %>€</p>
+      <p class="price"><span class="max-symbol">⩽</span><%= sprintf('%.2f', product.expedition_costs.truncate(2) + @pick.price.truncate(2)) %>€</p>
     </div>
   <% end %>
 </div>
