--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -21,6 +21,12 @@
           <%= f.input :price, label: false, placeholder: "Votre prix" %>
           <span class="icon fas fa-euro-sign"></span>
         </div>
+        <% if @campaign.product.size == true %>
+          <div class="input-and-icon">
+            <%= f.input :size, label: false, placeholder: "Taille choisie (voir description)" %>
+            <span class="icon fas fa-cut"></span>
+          </div>
+        <% end %>
       </div>
 
       <%= f.button :submit, "Valider", class: "btn-blue", id:"save-cta" %>
