--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -91,7 +91,7 @@
             </div>
           <% end %>
         <% else %>
-          <p class="orders">Pas encore de commande pour votre campagne.</p>
+          <p class="orders">Pas de commande pour votre campagne.</p>
         <% end %>
       </div>
 
