--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -4,7 +4,7 @@
   <%= render 'pros/dashboard-navigation' %>
   <div class="general-infos">
     <div class="campaigns-container">
-      <h1>Campagne pour <%= @campaign.title.capitalize %></h1>
+      <h1>Campagne pour <%= @campaign.title.capitalize %> (#<%= @campaign.id %>)</h1>
       <div class="stats">
         <div class="stat-block">
           <div class="top-block">
