--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -1,6 +1,32 @@
 @import "show";
 @import "new";
 
+.top-bloc {
+  margin-bottom: 70px;
+}
+
+.title-and-cta {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  a {
+    display: flex;
+    padding: 5px 20px;
+    border-radius: 20px;
+    align-items: center;
+    text-shadow: 0 1px 0 #ce870c;
+    background: -webkit-gradient(linear, left top, right bottom, from(#f5af19), to(#ff6d43));
+    background: linear-gradient(#f5af19, #ff6d43);
+    -webkit-box-shadow: 0 7px 13px -3px rgba(45, 35, 66, 0.3), 0 2px 4px 0 rgba(45, 35, 66, 0.4), inset 0 -2px 0 0 #4b58ba;
+    box-shadow: 0 7px 13px -3px rgba(45, 35, 66, 0.3), 0 2px 4px 0 rgba(45, 35, 66, 0.4), inset 0 -2px 0 0 #ce870c;
+    transition: box-shadow 0.15s ease, transform 0.15s ease, -webkit-box-shadow 0.15s ease, -webkit-transform 0.15s ease;
+    color: #FFF;
+    i {
+      margin-right: 5px;
+    }
+  }
+}
+
 
 
 .step {
@@ -39,5 +65,12 @@
 .not-yet-overlay {
   opacity: .5;
   background: black;
+}
+
+@media all and (max-width: 1280px) {
+  .top-bloc {
+    padding: 10px 20px;
+    margin-bottom: 20px;
+  }
 }
 
