--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,21 +4,24 @@
 <div class="dashboard-container">
   <%= render 'pros/dashboard-navigation' %>
   <div class="general-infos">
-    <div class="products-container">
+    <div class="feed-container">
       <% if @pro.stripe_uid.blank? %>
         <%= render 'shared/no-pro-id' %>
       <% elsif @products.blank? %>
         <%= render 'shared/no-products' %>
       <% elsif @products.present? %>
-        <div class="text-part">
-          <h5>Vos produits</h5>
+        <div class="top-bloc">
+          <div class="title-and-cta">
+            <h5>Vos produits</h5>
+            <%= link_to new_product_path do %>
+              <i class="fas fa-plus"></i>
+              <span class="hidden-xs">Ajouter un produit</span>
+            <% end %>
+          </div>
            <p>Retrouvez et gérez ici l'intégralité de vos produits.
             </p>
-          <%= link_to new_product_path do %>
-            <div class="btn-orange">Ajouter un produit</div>
-          <% end %>
         </div>
-        <div class="right-part product-feed">
+        <div class="product-feed">
             <div id="infinite-scrolling">
               <%= will_paginate @products %>
             </div>
