--- a/app/views/users/my_orders.html.erb
+++ b/app/views/users/my_orders.html.erb
@@ -4,13 +4,13 @@
 <div class="dashboard-container">
   <%= render 'dashboard-navigation' %>
   <div class="general-infos">
-    <div class="products-container">
-      <div class="text-part">
+    <div class="feed-container">
+      <div class="top-bloc">
         <h5>Vos commandes</h5>
         <p>Retrouvez ici l'historique de vos commandes.
          </p>
       </div>
-      <div class="right-part product-feed">
+      <div class="product-feed">
         <% if @picks.present? %>
           <div id="infinite-scrolling">
             <%= will_paginate @picks %>
