--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -17,7 +17,7 @@
               <p><%= campaign.views%></p>
             </div>
           <div class="icon-and-number">
-            <%= image_tag "gray-icon.png", class: "pick-icon" %>
+            <i class="fas fa-flask"></i>
             <p class="picks-counter"><%= campaign.added_to_cart.count%></p>
           </div>
         </div>
