--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -34,9 +34,6 @@
   display: flex;
   align-items: center;
 
-  .pick-icon {
-    height: 22px;
-  }
   .fa-bars {
   font-size: 20px;
   color: $blue;
@@ -60,43 +57,18 @@
   align-items: center;
   justify-content: center;
 
-
-  .tooltiptext {
-    visibility: hidden;
-    background-color: white;
-    color: $blue;
-    border: 1px solid $blue;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px;
-    position: absolute;
-    z-index: 1;
-    top: 90%;
-    min-width: 90px;
-    font-size: 15px;
-  }
-
-  .tooltiptext::after {
-      visibility: visible;
-  }
-
-  &:hover .tooltiptext {
-      visibility: visible;
-  }
 }
 
 .pending-icon {
   position: relative;
-  display: flex;
-  height: 22px;
-
+  font-size: 22px;
 }
 
 
 .picks-pending-circle {
   position: absolute;
-  left: 12px;
-  bottom: 2px;
+  left: 0;
+  bottom: 15px;
   min-width: 20px;
   min-height: 20px;
   margin: 0;
