--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -17,15 +17,10 @@
   <div class="pick-form">
     <%= simple_form_for [@campaign, @pick], url: pick_path(@pick) do |f| %>
       <div class="participation-input">
-        <div class="input-and-icon">
-          <%= f.input :price, label: false, placeholder: "Votre prix" %>
-          <span class="icon fas fa-euro-sign"></span>
-        </div>
+
+          <%= f.input :price, label: "Votre prix", placeholder: "€" %>
         <% if @campaign.product.size == true %>
-          <div class="input-and-icon">
-            <%= f.input :size, label: false, placeholder: "Taille choisie (voir description)" %>
-            <span class="icon fas fa-cut"></span>
-          </div>
+          <%= f.input :size, label: "Taille", placeholder: "(voir description)" %>
         <% end %>
       </div>
 
