--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -40,13 +40,16 @@
   <div class="pick-form">
     <%= simple_form_for [@campaign, @pick], url: pick_path(@pick) do |f| %>
       <div class="participation-input">
-        <%= f.collection_radio_buttons :answer, [["Yes", "J'en profite"] ,["No", "Prix pas assez attractif"]], :first, :last %>
+        <span><input type="radio" value="Yes" name="pick[answer]" id="pick_answer_yes" class="hidden"><label class="collection_radio_buttons pick-form-answer <%= 'active' if @pick.answer == "Yes" %>" for="pick_answer_yes">J'en profite</label></span>
+        <span><input type="radio" value="No" name="pick[answer]" id="pick_answer_no" class="hidden"><label class="collection_radio_buttons pick-form-answer <%= 'active' if @pick.answer == "No" %>" for="pick_answer_no">Prix pas assez attractif</label></span>
       </div>
       <p class="yes-outcome">Vous vous assurez de pourvoir profiter de la promo pour un maximum de <%= sprintf('%.2f', @pick.price) %> €. En bonus, si le prix que nous avons négocié est par exemple égal à <%= sprintf('%.2f', @pick.price * 0.9) %> €, vous profiterez de la promo à  <%= sprintf('%.2f', @pick.price * 0.9) %> € !</p>
       <p class="no-outcome">Vous aimez <%= @product.title %> mais une promo à <%= sprintf('%.2f', @pick.price.truncate(2)) %> € ne vous convainc pas à l'acheter ? Faites le savoir en validant le sondage. Si <%= sprintf('%.2f', @pick.price.truncate(2)) %> € est supérieur au prix que nous avons négocié pour vous, vous pourrez profiter du prix négocié à la fin de la campagne. En revanche, si <%= sprintf('%.2f', @pick.price.truncate(2)) %> € est déjà le meilleur prix négocié, vous ne pourrez pas profiter de ce prix négocié à la fin de la campagne.</p>
 
       <% if @campaign.product.size == true %>
-        <%= f.input :size, label: "Taille", placeholder: "(voir description)" %>
+        <div class="ab-size">
+          <%= f.input :size, label: "Taille", placeholder: "(voir description)" %>
+        </div>
       <% end %>
 
       <%= f.button :submit, "Valider", class: "btn-blue", id:"ab-cta" %>
