save some small front

--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -116,8 +116,8 @@ th {
   margin-top: 20px;
   padding: 20px;
   background-color: #f1f8fc;
-  text-align: justify;
-  display: inline-block;
+  text-align: center;
+  font-size: 16px;
 }
 
 .finalize-campaign-cta {
