--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -10,6 +10,11 @@
   min-height: 100vh;
   width: 59%;
   margin: 0 auto;
+  h4 {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f8fc;
+  }
 }
 
 .product-iterration {
