--- a/app/assets/stylesheets/users/my_campaigns.scss
+++ b/app/assets/stylesheets/users/my_campaigns.scss
@@ -56,6 +56,12 @@
   font-weight: bold;
 }
 
+.return-link {
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+}
+
 
 @media screen and (max-width: 480px) {
 
