--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,9 @@
           <%= render "shared/pending-picks" %>
         </div>
       <% end %>
+      <div class="right-links-menu">
+        <i class="fas fa-bars"></i>
+      </div>
     </div>
 
   </div>
