--- a/app/views/users/my_orders.html.erb
+++ b/app/views/users/my_orders.html.erb
@@ -17,7 +17,7 @@
           </div>
           <%= render "my_orders", picks: @picks %>
         <% else %>
-          <h4>Aucune commande validée</h4>
+          <h4 class="no-data">Aucune commande validée</h4>
         <% end %>
       </div>
     </div>
