--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -8,8 +8,11 @@
 
 .title-and-cta {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+  margin-bottom: 30px;
+  h5 {
+    margin: 0 30px 0 0;
+  }
   a {
     display: flex;
     padding: 5px 20px;
