save new style home

--- a/app/views/pages/_testimonies.html.erb
+++ b/app/views/pages/_testimonies.html.erb
@@ -23,7 +23,7 @@
           <%= cl_image_tag("jules.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Mr P Pickalgo earlybird") %>
           <h4 class="testimony-title">Jules, testeur de promo sur Pickalgo</h4>
           <div class="testimony-text">
-            "Formuler une proposition d'achat me pousse à être objectif dans mon avis sur la promo, et m'assure d'être gagnant. Bien vu !"
+            "En étant objectif dans ma réponse à la campagne de test, je suis quand même assuré de payer le meilleur prix. Bien vu"
           </div>
         </div>
       </div>
