--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,20 +36,20 @@
   </div>
     <div id="test-type">
     <div class="how-it-works">
-      <h2>Comment ça marche ?</h2>
+      <h2>Deux types de tests:</h2>
       <div class="conclusion-cases">
         <div class="icon-and-text-no-shaddow" id="fourth">
-          <%= image_tag "choice.svg", class: "action-image", alt: "icon image select a/b test choice svg" %>
+          <%= image_tag "ab.svg", class: "action-image", alt: "icon image select a/b test choice svg" %>
           <div class="quote-orange">A/B Test</div>
           <div class="step-text">
-            Nous présentons à chaque testeur de façon aléatoire un des prix auquel le vendeur pense proposer sa promo. Chaque testeur nous indique ce qu'il pense du prix qui lui a été présenté.
+            Nous présentons à chaque testeur de façon aléatoire un des prix auquel le vendeur pense proposer sa promo.
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "free.svg", class: "action-image", alt: "icon image free-price svg" %>
           <div class="quote-orange">Prix libre</div>
           <div class="step-text">
-            Déterminez vous-même le prix maximal que la promo doit adopter pour être attractive.
+            Déterminez vous-même le prix maximal que la promo doit adopter pour être attractive. Vous avez carte blanche.
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
   </div>
   <div id="how-it-works">
     <div class="how-it-works">
-      <h2>Un produit vous plaît ?
+      <h2>Comment ça marche ?
       </h2>
       <div class="steps">
         <div class="icon-and-text-no-shaddow" id="first">
@@ -78,7 +78,7 @@
           <%= image_tag "successful_purchase.svg", class: "action-image", alt: "icon image successful purchase svg" %>
           <div class="quote">Profitez...</div>
           <div class="step-text">
-            en exclusivité et avant tout le monde du meilleur prix promotionnel spécialement négocié pour vous
+            du prix promotionnel le plus bas spécialement négocié pour les parcitipants à la campagne de test
           </div>
         </div>
       </div>
