--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -22,7 +22,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Pickalgo c'est l'outil indispensable pour tester et lancer des promos qui atteignent leurs objectifs de façon efficiente.
+        <p class="concept">Le prix optimal de votre prochaine promo ne s'invente pas: il se découvre. Pickalgo c'est l'outil indispensable pour tester et lancer des promos qui atteignent leurs objectifs de façon efficiente.
         </p>
         <div class="cta-links">
           <%= link_to "Plus d'infos", more_infos_path, class:"btn-white cta-link go-to"%>
