save message and style pros page

--- a/app/assets/stylesheets/pages/_pros.scss
+++ b/app/assets/stylesheets/pages/_pros.scss
@@ -1,5 +1,8 @@
 #target {
   padding-top: 80px;
+  #first {
+    margin-top: 50px;
+  }
 }
 
 .what {
@@ -136,6 +139,10 @@
 
 #typer {
     text-align: center;
+}
+
+.reverse {
+  background-color: #f1f3f7;
 }
 
 
