--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -86,15 +86,7 @@
     <div class="text">
       <h3><i class="fas fa-play-circle"></i> En route vers votre objectif</h3>
       <div class="step-text">
-        <div class="box-case">
-          <p>Premier pas vers votre objectif: validez les commandes des acheteurs qui proposent un prix supérieur ou égal au prix déterminé grâce à l'analyse.</p>
-        </div>
-        <div class="box-case">
-          <p>Déclinez les propositions des acheteurs qui sont inférieures à celui-ci.</p>
-        </div>
-        <div class="box-case">
-          <p>Lancez votre promo à plus grande échelle: vous avez l'assurance de proposer le prix optimal pour atteindre vos objectifs de la façon la plus efficiente.</p>
-        </div>
+        Fort des enseignements de la campagne de test, lancez votre promo à plus grande échelle: vous avez l'assurance de proposer le prix optimal pour atteindre vos objectifs de la façon la plus efficiente.
       </div>
     </div>
   </div>
