--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -44,7 +44,7 @@
             <p>A la fin de la campagne vous saurez quel prix vous permet d'atteindre vos objectifs avec efficience. Validez automatiquement à ce prix que vous aurez déterminé, les commandes des testeurs qui auront proposé un prix supérieur ou égal à celui-ci.</p>
           </div>
           <div class="price-part">
-            <p>Merci de renseigner le nombre de prix que vous souhaitez tester. Vous pouvez tester entre 2 et 3 prix. A la fin de la campagne, les testeurs qui auront accepté de payer un prix supérieur ou égal au prix minimal que vous aurez déterminé, bénéficieront automatiquement de celui-ci. L'analyse des choix des utilisateurs en fonction du prix qui leur est présenté vous aidera à déterminer le meilleur prix pour votre campagne à plus grande échelle.</p>
+            <p>Vous pouvez tester 2 ou 3 prix. A la fin de la campagne, les testeurs qui auront accepté de payer un prix supérieur ou égal au prix minimal que vous aurez déterminé, bénéficieront automatiquement de celui-ci. L'analyse des choix des utilisateurs en fonction du prix qui leur est présenté vous aidera à déterminer le meilleur prix pour votre campagne à plus grande échelle.</p>
             <div class="price-inputs">
               <%= f.input :price_1, placeholder: "Exemple: 47,90", label:"Prix testé 1 (€)" %>
               <%= f.input :price_2, placeholder: "Exemple: 49,90", label:"Prix testé 2 (€)" %>
